# rust-template

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deny.toml  labels.json  platformio.ini  rust-toolchain.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  open_a_custom_issue.md  report_a_bug.md  request_a_feature.md
.github/workflows/: audit_at_midnight.yml  audit_on_push.yml  audit_weekly.yml  auto-approve_dependabot.yml  cargo_bloat.yml  ci.yml  deny_warnings.yml  dependabot_auto-approve.yml  dependencies.yml  pr_checks.yml  rust_auto_format.yml  update_labels.yml  validate_auto-approve_dependabot.yml  zulip_automation.yml
src/: build-flags.rs  empty.c  lib.rs
tests/: badges.rs  cargo_badges.rs  constants_.rs  headings.rs  meta_badges.rs  meta_constants_.rs  meta_contributing.rs  meta_dependabot.rs  meta_issue_templates.rs  meta_pull_request_template.rs  meta_travis.rs  meta_version_numbers.rs  readme.rs  version-numbers.rs
